# CoSiNe

./: .gitignore  .pre-commit-config.yaml  README.md  Singularity  compare_methods.py  comparison_results.csv  plot_runtime.py  pyproject.toml  requirements.txt  run_signedLFR_bench.sh
config/: colors.yml  signedLFR_optuna.yml
config/batch/: scenarios_param.csv
docs/: setup_server.md
notebooks/: data_exploration_LFR_PBMC.ipynb  data_exploration_PBMC.ipynb
old_results/: grid_search_results.csv
results/: benchmark_results.csv
scripts/: compare_methods.py  correlation_analysis.py  generate_scenarios.py  performance_benchmark copy.py  performance_benchmark.py  run_benchmark.py  run_clean.sh  run_signedLFR_bench.sh  run_tune_alpha_gamma_optuna.sh  runtime_benchmark copy 2.py  runtime_benchmark copy.py  runtime_benchmark.py  scenarios_param_fig2.csv
src/CoSiNe/benchmarks/: benchmark_community_detection.py  benchmark_community_detection_signed_graph copy 2.py  benchmark_community_detection_signed_graph.py  params copy 2.csv  params copy 3.csv  params.csv  params3.csv  run_benchmark_negative_effect.py  run_grid_search.py  run_grid_search_hard.py  run_grid_search_medium.py  run_grid_search_simple.py  run_pipeline.py  run_plot_networks.py  run_statistical_test.py
src/CoSiNe/community_detection/: greedy_modularity.py  infomap.py  label_propagation.py  leiden.py  louvain.py  louvain_signed.py  spectral_clustering.py  spinglass.py  walktrap.py
src/signedLFR/: signedLFR.py
tests/: test_community_detection.py
tests/old_results/: network_summary.txt
(+7 files in other folders)
