[tool.poetry]
name = "CoSiNe"
version = "0.1.0"
description = "Communities in Signed Networks"
authors = ["Luis Augusto Eijy Nagai <eijynagai@gmail.com>"]
readme = "README.md"
packages = [{ include = "CoSiNe", from = "src" }] 

[tool.poetry.dependencies]
python = ">=3.10" 
networkx = "^3.4.2" 
pandas = "^2.2.3"
python-louvain = "^0.16"
igraph = "^0.11.8"
leidenalg = "^0.10.2"
infomap = "^2.8.0"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
palettable = "^3.3.3"
powerlaw = "^1.5"
optuna = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.0"
mypy = "^1.15.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pre-commit = "^4.1.0"
ipykernel = "^6.29.5"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88